--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hapi": "^16.1.1"
+    "hapi": "^16.1.1",
+    "joi": "^10.4.1"
   }
 }
