--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "hapi": "^16.1.1",
-    "joi": "^10.4.1"
+    "joi": "^10.4.1",
+    "mongodb": "^2.2.26"
   }
 }
