--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "hapi": "^16.1.1",
     "joi": "^10.4.1",
-    "mongodb": "^2.2.26"
+    "mongodb": "^2.2.26",
+    "vision": "^4.1.1"
   }
 }
