--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "handlebars": "^4.0.10",
     "hapi": "^16.1.1",
     "joi": "^10.4.1",
     "mongodb": "^2.2.26",
